subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/StringAssign_Invalid_1.while
void main() {
    string foo = "hello";
    foo[0] = "z";
    print foo;
}

